--- a/SoundBoard/Base.lproj/Main.storyboard
+++ b/SoundBoard/Base.lproj/Main.storyboard
@@ -1,24 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PHT-Rm-PcJ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--GRABACIONES-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="SoundBoard" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kMb-kU-RAD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ex1-fB-7w6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ex1-fB-7w6" firstAttribute="top" secondItem="7Kb-L1-2g1" secondAttribute="top" id="N7s-ee-2MJ"/>
+                            <constraint firstItem="7Kb-L1-2g1" firstAttribute="trailing" secondItem="ex1-fB-7w6" secondAttribute="trailing" id="W8N-X0-rc3"/>
+                            <constraint firstItem="ex1-fB-7w6" firstAttribute="leading" secondItem="7Kb-L1-2g1" secondAttribute="leading" id="to3-3o-uBj"/>
+                            <constraint firstItem="7Kb-L1-2g1" firstAttribute="bottom" secondItem="ex1-fB-7w6" secondAttribute="bottom" id="w7C-O1-eQX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7Kb-L1-2g1"/>
                     </view>
+                    <navigationItem key="navigationItem" title="GRABACIONES" id="5Yt-sg-Lkl">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kbO-RC-J9W">
+                            <connections>
+                                <segue destination="QBh-Dn-V7q" kind="show" id="NOx-io-0w5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tablaGrabaciones" destination="ex1-fB-7w6" id="6Z7-cZ-cr8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1071.2" y="133.5832083958021"/>
+        </scene>
+        <!--Sound View Controller-->
+        <scene sceneID="grQ-eT-crn">
+            <objects>
+                <viewController id="QBh-Dn-V7q" customClass="SoundViewController" customModule="SoundBoard" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="69w-CF-8xU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36R-Jh-JCR">
+                                <rect key="frame" x="127.5" y="84" width="120" height="64"/>
+                                <state key="normal" title="Grabar" image="grabar">
+                                    <color key="titleColor" red="0.9923974871635437" green="0.0086274053901433945" blue="0.3429696261882782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="grabarTapped:" destination="QBh-Dn-V7q" eventType="touchUpInside" id="7vb-T8-LN8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lX9-cK-bH5">
+                                <rect key="frame" x="111" y="168" width="153" height="64"/>
+                                <state key="normal" title="Reproducir" image="reproducir">
+                                    <color key="titleColor" red="0.038619078695774078" green="0.3906191885471344" blue="0.93933039903640747" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="reproducirTapped:" destination="QBh-Dn-V7q" eventType="touchUpInside" id="hVa-z1-1Ac"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prc-jC-QWb">
+                                <rect key="frame" x="20" y="252" width="335" height="35"/>
+                                <color key="backgroundColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="nKe-hk-biL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Nombre de Audio" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8xC-yd-pze">
+                                <rect key="frame" x="20" y="307" width="335" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="dZc-Gs-YqR"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zqo-Ho-5bl">
+                                <rect key="frame" x="150" y="362" width="75" height="35"/>
+                                <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="0.76862157529999997" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="4OW-mI-XNP"/>
+                                    <constraint firstAttribute="height" constant="35" id="hrZ-u7-dVE"/>
+                                </constraints>
+                                <state key="normal" title="AGREGAR">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="QBh-Dn-V7q" eventType="touchUpInside" id="00I-4j-mSS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8xC-yd-pze" firstAttribute="centerX" secondItem="69w-CF-8xU" secondAttribute="centerX" id="08e-zb-Rbx"/>
+                            <constraint firstItem="prc-jC-QWb" firstAttribute="top" secondItem="lX9-cK-bH5" secondAttribute="bottom" constant="20" id="4Fi-Ml-BLe"/>
+                            <constraint firstItem="lX9-cK-bH5" firstAttribute="centerX" secondItem="69w-CF-8xU" secondAttribute="centerX" id="EKR-bx-KQy"/>
+                            <constraint firstItem="zqo-Ho-5bl" firstAttribute="centerX" secondItem="69w-CF-8xU" secondAttribute="centerX" id="Hjg-et-GOJ"/>
+                            <constraint firstItem="8xC-yd-pze" firstAttribute="top" secondItem="prc-jC-QWb" secondAttribute="bottom" constant="20" id="Oug-DO-b6o"/>
+                            <constraint firstItem="36R-Jh-JCR" firstAttribute="centerX" secondItem="69w-CF-8xU" secondAttribute="centerX" id="RKk-Rd-l1s"/>
+                            <constraint firstItem="UuV-kj-L8U" firstAttribute="trailing" secondItem="prc-jC-QWb" secondAttribute="trailing" constant="20" id="WGs-F1-pSJ"/>
+                            <constraint firstItem="prc-jC-QWb" firstAttribute="centerX" secondItem="69w-CF-8xU" secondAttribute="centerX" id="YlD-NN-Ti9"/>
+                            <constraint firstItem="36R-Jh-JCR" firstAttribute="top" secondItem="UuV-kj-L8U" secondAttribute="top" constant="20" id="crV-13-AEJ"/>
+                            <constraint firstItem="lX9-cK-bH5" firstAttribute="top" secondItem="36R-Jh-JCR" secondAttribute="bottom" constant="20" id="ia7-Sh-frh"/>
+                            <constraint firstItem="prc-jC-QWb" firstAttribute="width" secondItem="8xC-yd-pze" secondAttribute="width" id="o7Z-Cr-Ug9"/>
+                            <constraint firstItem="prc-jC-QWb" firstAttribute="leading" secondItem="UuV-kj-L8U" secondAttribute="leading" constant="20" id="rb2-hm-mzv"/>
+                            <constraint firstItem="zqo-Ho-5bl" firstAttribute="top" secondItem="8xC-yd-pze" secondAttribute="bottom" constant="20" id="to0-00-Avb"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UuV-kj-L8U"/>
+                    </view>
+                    <connections>
+                        <outlet property="agregarButton" destination="zqo-Ho-5bl" id="Hxs-hD-5Zo"/>
+                        <outlet property="grabarButton" destination="36R-Jh-JCR" id="Ieb-n9-SFc"/>
+                        <outlet property="nombreTextField" destination="8xC-yd-pze" id="0lX-3Z-oVz"/>
+                        <outlet property="reproducirButton" destination="lX9-cK-bH5" id="3pk-AZ-jBY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rZW-hs-52Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1758" y="134"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aZM-vW-bWe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PHT-Rm-PcJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kaF-UH-950">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="z4P-Th-3xs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OQo-h4-Ynp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="361" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="grabar" width="64" height="64"/>
+        <image name="reproducir" width="64" height="64"/>
+    </resources>
 </document>
